# simple-fractal-viewer

./: CMakeLists.txt  LICENSE.txt  README.md
assets/shaders/: mandelbrot.frag  mandelbrot.vert  visual.frag  visual.vert
src/: gl_loader.h  main.cpp
